--- a/index.html
+++ b/index.html
@@ -2,33 +2,37 @@
 <html>
 <head>
 <style>
+table, td, th {  
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
 }
 
 th, td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
+  padding: 15px;
 }
 </style>
 </head>
 <body>
 
-<h2>Hoverable Table Miriam</h2>
-<p>Add the border-bottom property to th and td for horizontal dividers:</p>
+<h2>The padding Property</h2>
+
+<p>This property adds space between the border and the content in a table.</p>
 
 <table>
   <tr>
     <th>Firstname</th>
     <th>Lastname</th>
-  <th>Savings</th>
+    <th>Savings</th>
   </tr>
   <tr>
-    <td>Miriam </td>
+    <td>Miriam</td>
     <td>Vargas</td>
-    <td>4-I</td>
+    <td>4I</td>
   </tr>
   <tr>
     <td>Lois</td>
@@ -49,3 +53,5 @@ th, td {
 
 </body>
 </html>
+
+
