--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ tr:hover {background-color: coral;}
     <th>Points</th>
   </tr>
   <tr>
-    <td>Miriam</td>
-    <td>Vargas</td>
-    <td>4I</td>
+    <td>Peter</td>
+    <td>Griffin</td>
+    <td>$100</td>
   </tr>
   <tr>
     <td>Lois</td>
@@ -52,3 +52,5 @@ tr:hover {background-color: coral;}
 
 </body>
 </html>
+
+
