--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ tr:hover {background-color: coral;}
     <th>Points</th>
   </tr>
   <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
+    <td>Miriam</td>
+    <td>Vargas</td>
+    <td>4-I</td>
   </tr>
   <tr>
     <td>Lois</td>
